// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swish methods Pay 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 10,
      "Currency": "SEK",
      "Invoice": "64752550bf1f40",
      "Order": "64752550bf1f40",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Pay",
            "Name": "swish",
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;

exports[`Swish methods Refund 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountCredit": 0.01,
      "Currency": "SEK",
      "Description": "Buckaroo Node SDK Refund Transaction Test",
      "Invoice": "64752550bf1f40",
      "OriginalTransactionKey": "571519D5237B40D884B6D95245ED953B",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Refund",
            "Name": "swish",
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;
